--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "bb-bob",
 	"version": "0.0.1",
+	"description": "BB-Bob is your friend.",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -32,8 +33,5 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.0.0"
 	},
-	"type": "module",
-	"dependencies": {
-		"ress": "^5.0.2"
-	}
+	"type": "module"
 }
