feat: close mouth after finished talking

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "BB-Bob is your friend.",
 	"scripts": {
 		"dev": "vite dev",
+		"dev:host": "vite dev --host",
 		"build": "vite build",
 		"package": "svelte-kit package",
 		"preview": "vite preview",
