--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"sass": "^1.54.3",
-		"svelte": "^3.44.0",
+		"svelte": "^3.54.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.1.0"
+		"vite": "^4.0.0"
 	},
 	"type": "module",
 	"dependencies": {
+		"@supabase/supabase-js": "^2.1.3",
 		"dotenv": "^16.0.2"
 	}
 }
