--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@supabase/supabase-js": "^2.1.3",
-		"dotenv": "^16.0.2"
+		"firebase": "^9.15.0"
 	}
 }
