--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"firebase": "^9.15.0"
+		"firebase": "^9.15.0",
+		"firebase-admin": "^11.4.1"
 	}
 }
