--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@firebase/app-types": "^0.9.0",
 		"@playwright/test": "^1.22.2",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
@@ -37,6 +38,7 @@
 	"type": "module",
 	"dependencies": {
 		"firebase": "^9.15.0",
-		"firebase-admin": "^11.4.1"
+		"firebase-admin": "^11.4.1",
+		"uuid": "^9.0.0"
 	}
 }
