--- a/package.json
+++ b/package.json
@@ -37,8 +37,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"firebase": "^9.15.0",
-		"firebase-admin": "^11.4.1",
-		"uuid": "^9.0.0"
+		"firebase": "^9.15.0"
 	}
 }
