--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -16,6 +16,8 @@ jobs:
 
       - name: Setup PNPM
         uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7.22.0
 
       - name: Cypress run
         # Uses the official Cypress GitHub action https://github.com/cypress-io/github-action
